Attempt fix for mobile horizontal scroll

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,6 +6,9 @@ html{
 body{
   background-color: $background;
   color:white;
+  text-rendering: optimizeLegibility;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .full-width {
